--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -25,7 +25,7 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
 </head>
-<body class="h-dvh overflow-hidden">
+<body class="h-dvh overflow-y-auto">
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
