updates to dynamic form and overall layout and ui design

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -25,7 +25,7 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
 </head>
-<body>
+<body class="bg-gradient-to-br from-primary via-white to-accent dark:from-black dark:via-secondary dark:to-accent">
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
